# catkin_ws

./: .gitignore  README.md  rhonn_review.xml  vector_data 1.csv  vector_data.csv
src/descentralized_controller/: CMakeLists.txt  package.xml  setup.py
src/descentralized_controller/include/: Efk.h  Rhonn.h
src/descentralized_controller/scripts/: controller.py  data_topic.py  efk.py  identifier.py  linealization.py  plotter.py  rhonn.py  saving.py  v2_ident.py
src/descentralized_controller/src/: Efk.cpp  Rhonn.cpp  identifier.cpp  listener.cpp  talker.cpp
src/descentralized_controller/src/backup_files/: backup1_identifier.cpp  backup2_identifier.cpp  backup3_identifier.cpp  backup4_identifier.cpp  backup6_identifier.cpp
src/matlab_msg_gen_ros1/glnxa64/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/matlab_msg_gen_ros1/glnxa64/install/include/dynamic_introspection/: BoolParameter.h  DoubleParameter.h  IntParameter.h  IntrospectionMsg.h  MarkerParameter.h
src/matlab_msg_gen_ros1/glnxa64/install/include/tf_lookup/: Subscription.h  TfLookupAction.h  TfLookupActionFeedback.h  TfLookupActionGoal.h  TfLookupActionResult.h  TfLookupFeedback.h  TfLookupGoal.h  TfLookupResult.h  TfStreamAction.h  TfStreamActionFeedback.h  TfStreamActionGoal.h  TfStreamActionResult.h  TfStreamFeedback.h  TfStreamGoal.h  TfStreamResult.h  lookupTransformRequest.h  lookupTransformResponse.h  visibility_control.h
src/matlab_msg_gen_ros1/glnxa64/install/include/twist_mux_msgs/: JoyPriorityAction.h  JoyPriorityActionFeedback.h  JoyPriorityActionGoal.h  JoyPriorityActionResult.h  JoyPriorityFeedback.h  JoyPriorityGoal.h  JoyPriorityResult.h  JoyTurboAction.h  JoyTurboActionFeedback.h  JoyTurboActionGoal.h  JoyTurboActionResult.h  JoyTurboFeedback.h  JoyTurboGoal.h  JoyTurboResult.h  visibility_control.h
src/matlab_msg_gen_ros1/glnxa64/install/include/whole_body_state_msgs/: CentroidalState.h  ContactState.h  JointCommand.h  JointState.h  Rhonn.h  RhonnState.h  WholeBodyController.h  WholeBodyState.h  WholeBodyTrajectory.h  visibility_control.h
src/matlab_msg_gen_ros1/glnxa64/install/share/tf_lookup/: package.xml
src/matlab_msg_gen_ros1/glnxa64/install/share/twist_mux_msgs/: package.xml
src/matlab_msg_gen_ros1/glnxa64/install/share/whole_body_state_msgs/: package.xml
src/matlab_msg_gen_ros1/glnxa64/src/: CMakeLists.txt
src/matlab_msg_gen_ros1/glnxa64/src/dynamic_introspection/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
src/matlab_msg_gen_ros1/glnxa64/src/dynamic_introspection/src/: dynamic_introspection_BoolParameter_message.cpp  dynamic_introspection_DoubleParameter_message.cpp  dynamic_introspection_IntParameter_message.cpp  (+2 more)
src/matlab_msg_gen_ros1/glnxa64/src/tf_lookup/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
src/matlab_msg_gen_ros1/glnxa64/src/tf_lookup/include/tf_lookup/: visibility_control.h
src/matlab_msg_gen_ros1/glnxa64/src/tf_lookup/m/+ros/+internal/+ros/+custommessages/+tf_lookup/: subscription.m  tfLookupActionFeedback.m  tfLookupActionGoal.m  tfStreamAction.m  tfStreamActionFeedback.m  tfStreamActionResult.m  tfStreamFeedback.m
src/matlab_msg_gen_ros1/glnxa64/src/tf_lookup/m/+ros/+msggen/+tf_lookup/: TfLookupFeedback.m  TfLookupGoal.m  TfStreamActionGoal.m  TfStreamActionResult.m  TfStreamFeedback.m  TfStreamGoal.m  lookupTransformRequest.m  lookupTransformResponse.m
src/matlab_msg_gen_ros1/glnxa64/src/tf_lookup/src/: tf_lookup_Subscription_message.cpp  tf_lookup_TfLookupActionFeedback_message.cpp  tf_lookup_TfLookupActionGoal_message.cpp  tf_lookup_TfLookupActionResult_message.cpp  tf_lookup_TfLookupAction_message.cpp  tf_lookup_TfLookup_action.cpp  tf_lookup_TfStreamActionFeedback_message.cpp  tf_lookup_TfStreamActionGoal_message.cpp  tf_lookup_TfStreamActionResult_message.cpp  tf_lookup_TfStreamAction_message.cpp  tf_lookup_TfStream_action.cpp  tf_lookup_lookupTransform_service.cpp
src/matlab_msg_gen_ros1/glnxa64/src/twist_mux_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
src/matlab_msg_gen_ros1/glnxa64/src/whole_body_state_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
src/play_motion/: README.md
src/play_motion/play_motion/: CMakeLists.txt
src/play_motion/play_motion/config/: position_manipulation (copia).yaml  position_manipulation.yaml  reemc_controller_config.yaml
src/play_motion/play_motion/launch/: effort_subscriber.launch  position_control.launch  position_publisher.launch  position_subscriber.launch  structure.launch
src/play_motion/play_motion/scripts/: my_position_subscriber.py  position_subscriber.py
src/play_motion/play_motion/src/: effort_subscriber.cpp  ejemplo_documentacion_identificador.cpp  move_joint_group.cpp  my_position_subscriber.cpp  position_control.cpp  position_publisher.cpp  position_subscriber.cpp  yaml_position.cpp
src/play_motion/play_motion/src/play_motion/: move_joint.py
src/reemc_controllers/: CMakeLists.txt  README.md  package.xml  reemc_effort_controller_plugins.xml
src/reemc_controllers/config/: effort_controller_config.yaml  effort_controller_config_BACKUP.yaml  effort_manipulation.yaml  robot_configuration.yaml
src/reemc_controllers/launch/: effort_control.launch  yaml_effort.launch
src/reemc_controllers/scripts/: rhonn_identificador.py
src/reemc_controllers/src/: effort_controller.cpp  yaml_effort.cpp
src/reemc_robot/reemc_controller_configuration/launch/: joint_trajectory_controllers.launch
src/reemc_robot/reemc_description/robots/: reemc_full_ft_hey5 (copia).urdf
src/reemc_simulation/reemc_gazebo/models/reemc_full/: model.urdf
src/whole_body_state_msgs/: CMakeLists.txt  setup.py
src/whole_body_state_msgs/msg/: Rhonn.msg  RhonnState.msg  WholeBodyState.msg
src/whole_body_state_msgs/scripts/: Prueba1Niger.py  com_des.py  cubic_spline.py  feet_des.py  multi_reference.py  multi_reference_con_drift.py  multi_reference_estampado.py  multi_reference_integrado.py  multi_reference_test.py  posture_des.py  subscriber.py  wbs_pub.py
src/whole_body_state_msgs/urdf/: simple_shape.urdf
(+116 files in other folders)
