<?xml version="1.0"?>
<package format="2">
  <name>reemc_controllers</name>
  <version>1.0.0</version>
  <description>Callback controlers for reemc humanoid robot</description>

  <maintainer email="edgar.maciasg@cinvestav.mx">Edgar Macías García</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ddynamic_reconfigure</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>whole_body_state_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>ddynamic_reconfigure</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>ddynamic_reconfigure</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>whole_body_state_msgs</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/reemc_effort_controller_plugins.xml"/>
  </export>

</package>
